deploy/components/dependency-track/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dependency-track-frontend
  labels:
    app.kubernetes.io/name: dependency-track
    app.kubernetes.io/component: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dependency-track
      app.kubernetes.io/component: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dependency-track
        app.kubernetes.io/component: frontend
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: frontend
          image: dependencytrack/frontend:4.12.7
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
