deploy/components/dependency-track/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dependency-track-apiserver
spec:
  selector:
    app.kubernetes.io/name: dependency-track
    app.kubernetes.io/component: apiserver
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: dependency-track-frontend
spec:
  selector:
    app.kubernetes.io/name: dependency-track
    app.kubernetes.io/component: frontend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
